    - Wait forever for GrabAccelerators to succeed
    - Add SuspendAndHibernate
    - Drop X11-specific code to handle idle times
    - Cancel smooth transitions on color temperature changes
    - Define "disabled until tomorrow" as moving past sunrise
  * debian/patches/0001-power-Make-power-test-more-robust.patch: Cherry-pick
    from upstream master branch - make the tests more robust.

 -- Iain Lane <laney@debian.org>  Thu, 26 Jul 2018 13:57:45 +0100

gnome-settings-daemon (3.28.1-1) unstable; urgency=medium

  * New upstream release 

 -- Tim Lunn <tim@feathertop.org>  Fri, 13 Apr 2018 18:19:32 +1000

gnome-settings-daemon (3.28.0-1) unstable; urgency=medium

  [ Simon McVittie ]
  * Remove empty debian/patches/
  * Vcs-*: Update for move from Alioth svn to salsa.debian.org git
  * d/gbp.conf: Add
  * New upstream release
  * d/copyright: Update

  [ Jeremy Bicha ]
  * Update Breaks for removal of the A11yKeyboard plugin
  * Upload to unstable

 -- Jeremy Bicha <jbicha@debian.org>  Sat, 17 Mar 2018 11:09:23 -0400

gnome-settings-daemon (3.27.92-1) experimental; urgency=medium

  * New upstream release candidate

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 05 Mar 2018 10:52:10 -0500

gnome-settings-daemon (3.27.91-1) experimental; urgency=medium

  * New upstream development release
  * Build with meson
  * Make build tests non-fatal since the tests need to be updated
    after the meson conversion. See upstream issue 7
  * A11yKeyboard plugin has been dropped, update some of the Breaks
    for this

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 19 Feb 2018 14:23:09 -0500

gnome-settings-daemon (3.26.2-1) unstable; urgency=medium

  [ Michael Biebl ]
  * New upstream release
  * Switch to dh_missing

  [ Helmut Grohne ]
  * Honour DEB_BUILD_OPTIONS=nocheck (Closes: #880486)

 -- Michael Biebl <biebl@debian.org>  Thu, 02 Nov 2017 18:45:01 +0100

gnome-settings-daemon (3.26.1-2) unstable; urgency=medium

  * Release to unstable
