@@ -6,7 +6,7 @@ Source: gnome-settings-daemon
 Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Jeremy Bicha <jbicha@debian.org>, Laurent Bigonville <bigon@debian.org>, Michael Biebl <biebl@debian.org>, Tim Lunn <tim@feathertop.org>
+Uploaders: Iain Lane <laney@debian.org>, Jeremy Bicha <jbicha@debian.org>, Laurent Bigonville <bigon@debian.org>, Michael Biebl <biebl@debian.org>, Tim Lunn <tim@feathertop.org>
 Build-Depends: debhelper (>= 11.1.3),
                gnome-pkg-tools,
                gtk-doc-tools,
@@ -49,6 +49,7 @@ Build-Depends: debhelper (>= 11.1.3),
                udev [linux-any] <!nocheck>,
                xauth <!nocheck>,
                xvfb <!nocheck>,
+               mutter (>= 3.27.90) <!nocheck>,
                xkb-data
 Standards-Version: 4.1.1
 Vcs-Git: https://salsa.debian.org/gnome-team/gnome-settings-daemon.git -b debian/experimental
