@@ -45,6 +45,7 @@ Build-Depends: debhelper (>= 11.1.3),
                udev [linux-any] <!nocheck>,
                xauth <!nocheck>,
                xvfb <!nocheck>,
+               mutter (>= 3.27.90) <!nocheck>,
                xkb-data
 Standards-Version: 4.1.1
 Vcs-Git: https://salsa.debian.org/gnome-team/gnome-settings-daemon.git -b debian/experimental
