@@ -24,15 +24,12 @@ override_dh_auto_configure:
 override_dh_missing:
 	dh_missing --fail-missing
 
-# Require installed gsettings schemas
-# https://gitlab.gnome.org/GNOME/gnome-settings-daemon/issues/7
-# Also the tests will require a Build-Dependency on mutter >> 3.27.90
 override_dh_auto_test:
 ifeq (,$(filter nocheck, $(DEB_BUILD_OPTIONS)))
 # The tests are not fatal on non-linux architectures
 # See: https://bugzilla.gnome.org/show_bug.cgi?id=770684#c2
 ifeq (,$(filter $(DEB_HOST_ARCH), hurd-i386 kfreebsd-i386 kfreebsd-amd64))
-	xvfb-run dh_auto_test || true
+	xvfb-run dh_auto_test
 else
 	xvfb-run dh_auto_test || true
 endif
